--- a/Pulumi.yaml
+++ b/Pulumi.yaml
@@ -1,3 +1,3 @@
 name: pulumi1
 runtime: nodejs
-description: A minimal AWS TypeScript Pulumi program
+description: AWS TypeScript Pulumi program to deploy HedgeDoc
